# marius

./: .gitignore  .gitmodules  CMakeLists.txt  Communication.md  out0.txt  out1.txt  outc.txt  results.txt  results_4_workers_live_journal_cpu.txt  setup.cfg
comms/: .gitignore
comms/src/: coordinator.cc  message.h
comms/src_torch/: CMakeLists.txt  coordinator.cc  message.h  worker.cc
examples/training/configs/: fb15k_cpu.ini  fb15k_gpu.ini  live_journal_cpu.ini  live_journal_gpu.ini  twitter_cpu.ini  twitter_gpu.ini
scripts/: build.sh  coordinator.sh  logs_parser.py  marius_train_metrics.sh  parseLogs.py  setup.sh  worker.sh  worker_metrics.sh
simulator/: coordinator.py  simulator.py  worker.py
src/cpp/include/: buffer.h  channel.h  communication.h  config.h  coord.h  coordinator.h  dataset.h  message.h  pipeline.h  storage.h  trainer.h  worker.h
src/cpp/python_bindings/: coordinator_wrap.cpp  dataset_wrap.cpp  io_wrap.cpp  worker_wrap.cpp  wrap.cpp
src/cpp/src/: buffer.cpp  config.cpp  coordinator.cpp  dataset.cpp  evaluator.cpp  io.cpp  marius.cpp  partition_comm.cpp  pipeline.cpp  policy_coordinator.cpp  policy_worker.cpp  storage.cpp  trainer.cpp  worker.cpp  worker_policy.cpp  worker_util.cpp
src/cpp/targets/: coordinator.cpp  coordinator_main.cpp  marius_main.cpp  worker.cpp  worker_main.cpp
src/cpp/targets/targets/: coordinator.cpp  worker.cpp
src/python/console_scripts/: coordinator.py  worker.py
src/python/tools/: csv_converter.py  preprocess.py
test/: Communication.md
